Modification index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>My super website</title>
   </head>
   <body>
-  
+    <h1>My super website</h1>
   </body>
 </html>
